--- a/src/progettazioneLogica/analisi_ridondanze.tex
+++ b/src/progettazioneLogica/analisi_ridondanze.tex
@@ -1,6 +1,6 @@
 Lo schema concettuale presenta 2 attributi ridondanti, cioè l'attributo \textbf{Annata} presente nell'entita' \textbf{BottigliaDiVino} e l'attributo \textbf{PrezzoTotale} presente nell'entità \emph{Ordine}. Quest'ultimo, infatti, è derivabile da $\sum_{n = 1}^{j} (PrezzoBottiglia_n \times QuantitaBottiglie_n) + PrezzoSpedizione$, 
 dove $j$ è il numero di tipologie di bottiglie di vino presenti nell'ordine,
-\textbf{PrezzoBottiglia} è l'attributo dell'entità \emph{Bottiglia di vino}, \textbf{PrezzoSpedizione} è l'attributo della relazione \emph{Spedizione} e \textbf{QuantitaBottiglie} è l'attributo della relazione \emph{Dettaglio}. L'operazione coinvolta è la \emph{Stampa resoconto guadagno}, che avviene 1 volta alla settimana. Analizziamo la tavola dei volumi e delle operazioni:
+\textbf{PrezzoBottiglia} è l'attributo dell'entità \emph{BottigliaDiVino}, \textbf{PrezzoSpedizione} è l'attributo della relazione \emph{Spedizione} e \textbf{QuantitaBottiglie} è l'attributo della relazione \emph{Dettaglio}. L'operazione coinvolta è la \emph{Stampa resoconto guadagno}, che avviene 1 volta alla settimana. Analizziamo la tavola dei volumi e delle operazioni:
 
 \begin{center}
 	\begin{tabular}{P{2cm}P{8cm}P{4cm}}
@@ -71,10 +71,10 @@ Nello schema \emph{senza ridondanza}, invece, per ogni ordine occorrera' acceder
 \begin{itemize}
 	\item \emph{BottiglieDiVino} per conoscere il prezzo della singola bottiglia dell'ordine;
 	\item \emph{Spedizioni} per conoscere il prezzo della spedizione;
-	\item \emph{Dettagli} per conoscere il prezzo totale delle bottiglie acquistate.
+	\item \emph{Dettagli} per conoscere la quantita' di bottiglie acquistate di un determinato tipo.
 \end{itemize}
 Si avranno $(350\times3)\times350$, dove $(350\times3)$ sono gli accessi totali alle tre tabelle citate prima e 350 sono le letture della tabella \emph{Ordini}. In totale si avranno $367500$ letture.\\
 \begin{verse}
-	Alla luce dei risultati emersi della precedente analisi si e' deciso di mantenere l'attributo \textbf{Prezzo totale} in \emph{Ordini}. Inoltre si e' deciso anche di mantenere l'attributo \textbf{Annata} in \emph{BottigliaDiVino} perche' il ragionamento ed il carico e' analogo alla suddetta situazione.
+	Alla luce dei risultati emersi della precedente analisi si e' deciso di mantenere l'attributo \textbf{Prezzo totale} in \emph{Ordini}. Inoltre si e' deciso di mantenere l'attributo \textbf{Annata} in \emph{BottigliaDiVino} perche' il ragionamento ed il carico e' analogo alla suddetta situazione.
 \end{verse} 
 \end{flushleft}
